# ProjectAnima_Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
baseq2/: anima_default.cfg
cmake/: config.h.in  psp_build.cmake  win32_build.cmake
src/client/: cl_cin.c  cl_fx.c  cl_input.c  cl_main.c  cl_parse.c  cl_scrn.c  cl_view.c  client.h  console.c  input.h  keys.c  keys.h  menu.c  osk.c  qmenu.c  qmenu.h  ref.h  snd_dma.c  snd_loc.h  snd_mem.c  snd_mix.c
src/common/: cmd.c  cmodel.c  common.c  cvar.c  files.c  qcommon.h  qfiles.h  zone.c  zone.h
src/game/: g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_trigger.c  g_turret.c  g_weapon.c  game.h  m_berserk.c  m_boss2.c  m_boss3.c  m_boss31.c  m_boss32.c  m_brain.c  m_chick.c  m_flipper.c  m_float.c  m_flyer.c  m_gladiator.c  m_gunner.c  m_hover.c  m_infantry.c  m_insane.c  m_medic.c  m_mutant.c  m_parasite.c  m_soldier.c  m_supertank.c  m_tank.c  p_client.c  p_hud.c  (+3 more)
src/ref_gl/: gl_draw.c  gl_image.c  gl_local.h  gl_mesh.c  gl_model.c  gl_model.h  gl_rmain.c  gl_rmisc.c
src/ref_gu/: gu_clipping.c  gu_draw.c  gu_extension.c  gu_extension.h  gu_helper.h  gu_image.c  gu_light.c  gu_local.h  gu_mesh.c  gu_model.c  gu_model.h  gu_render.c  gu_rmain.c  gu_rmisc.c  gu_rsurf.c  gu_types.h  gu_warp.c
src/ref_soft/: r_alias.c  r_draw.c  r_edge.c  r_image.c  r_local.h  r_main.c  r_misc.c  r_model.c  r_model.h  r_sprite.c
src/server/: server.h  sv_ccmds.c  sv_ents.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_user.c  sv_world.c
src/shared/: BOPS.S  m_flash.c  q_shared.c  q_shared.h
src/system/null/: cd_null.c  cl_null.c  glimp_null.c  in_null.c  net_null.c  snddma_null.c  swimp_null.c  sys_null.c  vid_null.c
src/system/psp/: Makefile  Makefile.game  cd_mp3.c  debug_psp.c  debug_psp.h  glob.c  in_psp.c  net_psp.c  q_shpsp.c  snd_psp.c  snd_psp_vaudio.c  swimp_psp.c  sys_psp.c  vid_menu_gu.c  vid_menu_soft.c  vid_psp.c
src/system/psp/export/: crt_shared.S  exports.exp  module.c  q_shared.S
src/system/psp/resources/: dbgfont
src/system/win32/: cd_win.c  glw_imp.c  in_win.c  net_wins.c  q_shwin.c  qgl_win.c  rw_ddraw.c  rw_dib.c  rw_imp.c  snd_win.c  sys_win.c  vid_dll.c  vid_menu.c
